--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,16 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
 
-      # Крок 4: Публікація рішення (optional, для перевірки)
+      # Крок 4: Публікація рішення
       - name: Build
         run: dotnet build --configuration Release
 
       # Крок 5: Запуск тестів
       - name: Run tests
-        run: dotnet test --configuration Release --no-build --verbosity normal
+        run: |
+          dotnet test --configuration Release --no-build --verbosity normal
         continue-on-error: false  # Зупинити дію при помилці тестів
+
+      # Крок 6: (Optional) Очищення після тестів або додаткові кроки
+      - name: Clean up
+        run: dotnet clean
